@@ -1,4 +1,7 @@
 import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 public class WordsChecker {
     private String text;
@@ -7,8 +10,11 @@ public class WordsChecker {
         this.text = text;
     }
     public boolean hasWord(String word){
+        Set<String> set = new HashSet<>();
         String[] words = text.split("\\P{IsAlphabetic}+");
-    return Arrays.asList(words).contains(word);
+        set.addAll(List.of(words));
+        return set.contains(word);
+//    return Arrays.asList(words).contains(word);
     }
     public void printText(){
         String[] words = text.split("\\P{IsAlphabetic}+");
